@@ -4,23 +4,25 @@ Hash: SHA256
 AUX uptimed.init 489 SHA256 a154393304f8cdee4421f663c6f825a4744015a23249f01555e59e2f1484a61b SHA512 145727be933bfc47ab3a6c39ade778c7243dcec0db4345ec2398f9d93e66bc64952a4b0c835052ebd80b389e936c91b8575d7dd92e5d73eb9990848ed3c2e0ab WHIRLPOOL f95391052b876375c928372261f7b67ec0813a030bf290c8871dcdedf129b48707208377cb58238639d3a95eafaff59e47261fbee1ad8e2aa40325b2f8c35411
 AUX uptimed.service 209 SHA256 1be567def3288746970983ab6abe2c7c3cd304bb32a615430d7789298eb35d64 SHA512 949baf12782d4b8a976d29ec44bd31323500de763b82601634eea3721ce9035bb9b7ca906384e2b8ebd57371a1116a95dd78c3610c27fa1d93e36b9f897bcd98 WHIRLPOOL d38ab160b8957dce6edfd64f0d90239708fdeadac303b10e88fa4335295cb7638db077da7c8cb7a4b87a1f6ee1ff6efc452f25897d8db0beb1539fe21c5352b8
 DIST uptimed-0.3.17.tar.bz2 269102 SHA256 524ce8984c0d0a780a32025ba3ffb980e5eec3d78e65cf68c91edec7fe833a06 SHA512 d462fa435b07bc335738dfccddd374aaa94fe2671a652afb8cb85d5e69e2148c296dec2a575ef074675e64e5453cb2d0807f80b191d9aeb5233168a617e842c5 WHIRLPOOL 38ce1ec75a0a3b82d448d85f256dce4b77265e59dead4557c8a039056bd2f230355cffb90a776badc351315d072c10d227744905b8fcc6b3f6f32ac7d6492125
+DIST uptimed-0.3.18.tar.gz 397295 SHA256 fe9c0c78c8fca1ef9b61474f2039dc3634f2caf1c547b7ddc7a4eaa31238b2c9 SHA512 6ccc9eebec2ed1b4dd0cc11590ba277c7ed453c244207772c26d147682627e47e7265e1b599ed505fb8aae8b013c61e77889e9d5ed638f994b579142b85fed1f WHIRLPOOL 848ff159267bb71fa5b8a63f55a954d21c125306d1defb60c807921130c820c8576a050326ba0fe718805f34b17c4092a01b534ffdc852599da47ced0a754b19
 EBUILD uptimed-0.3.17-r2.ebuild 1533 SHA256 6c7cca275e08429c03afe0577c26d7a4590b150a57c5bdc20d1278114e13ede8 SHA512 8e441cddb3d3895d171eed83a640c2bf49653a26f71865a8548f6673ab45782eb908172319c87b57fa6f001cc3e400d8cd8892ed77c62077e9ec80ba3df258d8 WHIRLPOOL ec0b1e3b16df79f6ed2fd26ef9976ad8008f6aaf2703d6ed7b344f1ad9e391ac4fd5c48c7d87f2c33955764e1f00a1eb247024e070e9b33fbbdce1db45e88303
-MISC ChangeLog 13239 SHA256 53feccc2021e20feb3f473ed502b7d656fea6f89fa9ca42bd6167c5bd402f83e SHA512 8af095b77bb5191e7f7aa3fe2e32b622112976c5d240459a2e87b87db7818666d619ed54a98e0313dd0eecb91504823332110b1b71352f23bbd7889246a2f436 WHIRLPOOL cf5ef7a263217d3d4ff2655605ea17c9945564078f37f5b7c8fbb6e600acd0342505d0dd7eeb73886bbd9e1146c0cea19917cda2f2038be9bd2833cf02b501e9
+EBUILD uptimed-0.3.18.ebuild 1580 SHA256 e8024184dff805be5650214bedef81404d113d2ce2dfaad5c246e83e0804604a SHA512 7d9259a0bf7fdaaa84b9fedcb79101f7149d1dc1d1b5c8bf9d6415768b40dc87d943cf56d81166bb8a6e78528de357049e7137ba4a8c556ddf62a841605f3a4c WHIRLPOOL 144f47fdd880f64534b058d3601d9a72ce4b6b375ceefcabb7b73817a78403e098684db11ebb7fe95ef0f9676d46cf92078f087d95500fdd5e764706c56a62ac
+MISC ChangeLog 13365 SHA256 5bd350ba701a069639de0de52d8afc180357521a4fd57b7c42fe304bd8b8b8cd SHA512 1bc6e052716eefb30e9795f7fb2fe8cddf2f305b20b0cde287566f1684c56db74550d115671adde929292f95eaed48974816ad5d4182c6174befc04b41dd224d WHIRLPOOL 8c009a62778a1c6b71ad50a1b24d2b685abd451ff81e68c4290e44f094ae96011b0cd2f9378418b0bd81d4dfa5bb402089330f02e0c52ef65034d60dc67a5bf3
 MISC metadata.xml 237 SHA256 97e2852866e146fd242be6cddceb93aebc2b28056cdafa3ff688a0cfc97a5065 SHA512 d21eed02cc15021ad5f18c4c932afdf4d6cfbb64a243764b61914aac9e57f6089ebb9e3a37e136e5bb7bf4f28d29bba49279d52a75acc3a6f921c770213758a5 WHIRLPOOL 92462bf73803127a88d9e2a02503d36efd2b8f1c938f3f2c00145db02871ea9ce241eba371138b6ab80c4774f858250b5eba08886ff355c0f212bfbc2cda3d9f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTFIm+AAoJEPiazRVxLXTFM8cQAJSAMRLxI641ZM5WcaNdUZ2L
-i8LLfPcGJOKVhxF1cavuoo1l573Jp3wYS7Aqu0X0by0ucQPdFTTvT0gVF1D0oOWK
-HIpFcHF23ZjtU9sJmmKS3Fc01KOJMmPbmo8xCkcuRwZ+Ayd/GTg0yc6YHx3RtMZ0
-iZPTJi6Cw1IkafrXi8SnIhuDOLGwaEB6Mi3htyIkw+yYi36vVmnmqroU34rC55fg
-pObfhpsy0uClVwlftHUreoNzgs4jaJCdWoKM9fwbVU5ubnfGicbSju74Lu1YTunS
-+p5bOXviyi8K96Nmiq3B4ksGFkivFHW25DAQv2quliVtYAEZh7S8crEsuG8tTNol
-MFT1E5kPiy+oESz1p0ax2WYTVNLOpXpmLmZWIBizBJB0vkLlJwKdPcmNPFtBUAR/
-ZxDAX86vlQXR905ZvftaNqomerWYT4ak13exVj0jV40Rx4UMkJvVyqyu1lZu4fSP
-AzTXk+9rN50s/Y/QkLmxb37rpodhL/JFHCN9qPZf2XQyn4N9p0/SRIoGs0O/cLeh
-0/xoIvsQ8AYQ62iy8nU/CbPtjGx1yhNGMCPAZwqxS62KgxIfAie660t1c50IplgW
-DiQR4u7h01ib93o8wyLnebrwR2ss+2qQf9tWX2tixiN0A7sJK8mpH0wpcQoQ7/Wd
-LEYG/cEVyBFGX+dUyLCR
-=PheC
+iQIcBAEBCAAGBQJUayEaAAoJEPiazRVxLXTFlTYQAKzDpHe/GMyxm7lDACLtyShm
+mcfte/yhzSfYFaxI67nm7cN9iakS+Luxc5klNcjAXvr5F5UqbnHyQDlCqSah4LSQ
+z5Vp2IIsHE3URFWPBcFGw/LTHyfLuwxYRzf/nIyXczYkoogpqDAL46nvKOf9PuyO
+inErzGx9oLRi55jMIIr0CyHdpmqH1Hx96ptJAS5GJ0U/ByJ6a5+XrF9y1DE5m2zf
+bnr05CJRhK5ZLk1cj+98Vr8aJ8Kh6HOJ96sIzTcbc/TC3BIP8uOdCDvcR5ELL08E
+9sq47TzoXmNwHxV2+V+GcSL+fLOm0R+Z/yl92mIBhg2Y7R1RikbmZbG3k7XnH25W
+mz8MD55LfJWLurw5l5kAnGta04mmu2FIB7dNfJmVg9qEcRU3gFek36p+eB9InIxN
+K4SwYvePnuJ23SuoQ+XwIoPMo0xsXlwnIeS1rmBJX/djAD5ZD3wkxBExVxdr68m9
+UefIkjo7W68NvUifIGCg41L3+5oCwMUYh1cp+iYuhQ0cT1Szna2aa2u17Leqbakl
+szMYPS4Q9/dDIG0h/GZndlTaUUur2p3OIhFK/rQ+UUUF1oDeza4IGMD+cWUFpXQe
+z5JkGxuB7WT7bywIt3jmMyzTNd38CsZ9nTefpP/Z4QSHci5xLSZ1OYKLa8dKfySe
+tfre0VAjcvn9HWcYM0Fq
+=4rjr
 -----END PGP SIGNATURE-----
