@@ -1,0 +1,12 @@
+DEFINED_PHASES=configure install postinst prepare setup
+DEPEND=!<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 virtual/pkgconfig
+DESCRIPTION=System uptime record daemon that keeps track of your highest uptimes
+EAPI=5
+HOMEPAGE=https://github.com/rpodgorny/uptimed/
+IUSE=static-libs
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~mips ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd
+LICENSE=GPL-2
+SLOT=0
+SRC_URI=https://github.com/rpodgorny/uptimed/archive/v0.3.18.tar.gz -> uptimed-0.3.18.tar.gz
+_eclasses_=autotools	7bcca47e6ac6bbfa251fe7e9483fcf67	eutils	6faef4c127028ccbba3a11400d24ae34	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=21b2a07a587bfc8fe47f739742739c3f
