@@ -6,15 +6,17 @@ DIST youtube-dl-2014.11.02.1.tar.gz 1123292 SHA256 2e4ee5cc168eb56f778beec48809a
 DIST youtube-dl-2014.11.15.tar.gz 1127780 SHA256 08f8164be2e923b90d4ba9dee81376004151bf88db23623106de12c0025929ba SHA512 c21bf4e9c93c412fcfd5c09ebe35fe642b941d80e540365f3d0487739b8e04d05a3b50e6eea1aec94c4176c36547088cd2e2c692120be10a010ffd3664a5eed3 WHIRLPOOL e7c464c5471900a05b906484415a13ea901d8912726cda3ffab9c94679cce9123a8a0b4a50d9e6e2643e81fa0bbb3dc4f634b908d05c2d4efc80168ca508ce1d
 DIST youtube-dl-2014.11.16.tar.gz 1129759 SHA256 78f0e7e4edbae25d12d6a9964b23c61cc9fa8fc7f02d0371e985465e7f2b1244 SHA512 2f04e228ffc6fe59eda5140a7927174a7fb57dd887633115c54234e9c8400d9ca424b8f9d4c584da7237e697bf29ebd4c87a92b01ce865fa7e9c0d44e0923c91 WHIRLPOOL b00a6bbdd7c2596415dc01717d93d61e27c9c57756b020670fef7a4fae1052ec4553a08104f94d531cf2924ce8705c6915a62924ec09cf3992c9b864b8e792b3
 EBUILD youtube-dl-2014.07.15.ebuild 1580 SHA256 b40b45b9bdff54c5ddb131a8bbbba601f1e5a2ad77d047993bb4bc7ca4ac667f SHA512 000fe37db834ecd84fddcc87fa090e4c772e225e7eb808aed6ef1fc3dd32af362b7b25faed6329a7d609c0be27dfdcf9a58a95177272e0df1230e1bb6dfc0104 WHIRLPOOL c4488912bf867f34d7508d9a27274ab0a952956f37113d902f49913fb47837883f98ca76417564a94cd2d85dc7824fe296874aff7572bfca110e54c126678e93
-EBUILD youtube-dl-2014.11.02.1.ebuild 1675 SHA256 3bbdcef4c757df0f41005bf39179291c44b6350991eab84d8dcb544986eb0ea3 SHA512 20307732bde5b8d27b521e87d9072c10001762327255912baa0299e518c662fcc615bc71d6205938a932cba9b68932c88201eab0b843d976c0bd708e85690aa2 WHIRLPOOL 175be142e64e953b63224f976c6c961d279ad022ab6c35d48def23810bb98f8799734eff5eeb86ebcb5583a5c38f57f5bbd88ed8a87a42b256fbaa5781325bbc
+EBUILD youtube-dl-2014.11.02.1.ebuild 1678 SHA256 d20f66908ce3294349bd37b61a1e51ef5e6a873e6a838647e6efa324fcc1c4cd SHA512 ffc92b1ae74d643e849e549cb21f3ef25881a1ebaa9771815645bd2becb6d10a48873cc19c03771e8cb5422fd16ca2f654316ac5af5d0dc1b42ea6896a17e824 WHIRLPOOL dcd59e7c4f0f1a35addf22d85ae87ce258d80ccb65367e41707c8440b6778e3e43d2d6ccf73aa59b272f7ca2f81b86be1c1c308ba5cdd2a442d3e0c27470b640
 EBUILD youtube-dl-2014.11.15.ebuild 1680 SHA256 1c4714914814beae4d9236a99930ac8798560c23d34ecf23b886e0dc0de248fe SHA512 f7f94d08ded6a49bd70b129957f3cb89a9722b9554bd57563b20001e7884340ceb86abae351affd771cf6a8175edda4e1849c0f4e9b3aa3b7beb56905ac438c3 WHIRLPOOL 89b5bfc86268237f772bf54a9af11ed1cc29c042018ee3180c77232b5a5f9a2a0ef06691d5cd4ee2d53b7deaf15c2fbb7a96c2dfef18cd5ac330f97d1e919f8a
 EBUILD youtube-dl-2014.11.16.ebuild 1680 SHA256 b31ff5c16b66ce58b305b613fe286f086daeb97eb5db964fe0afd56decdf4631 SHA512 fd3e8cdbe27720392ccdf6890f64db10c54319fa66919f9d37b0be5149ca656daba25de1fba7b7024862dccf2d6035fc4554cd6dfb03ee2b9cfca1afee3d13f9 WHIRLPOOL dcda6ac5a0cbb2787a343c2f811e59d34ba67d54a2921282fad3ff500d0e62ea47dbb590012fe8cb2cb88f0bfd14659c05b9a4de6c9ed080f885975112e9e8bf
-MISC ChangeLog 63573 SHA256 e15230ea959a73f8753638470e9eec4dffa5dbf39a99efce6174b9e7546b5d81 SHA512 8e0d9aa624e73995ccbb04349d0890ff598d23ee26868964868114fc5e0e36b8263b4e0fcb18dfd28e04de863130b8ed21ca8943818a8fa849239f2d8457b1e8 WHIRLPOOL 4d64642b0f66ad662211a3f07f1b43a634ff5b87eb75cfbaca06d89f010be28289b703cdeba13179eaf7d7f214d0a653c8dee0ca5b0aa88284503b8dd8506f24
+MISC ChangeLog 63691 SHA256 adc744c6f68a892d39383de8071218b55122d55da4165065398abc31f0d0f5e4 SHA512 e76d68d2eb45e6cba03d935cb7ef8211329d1f77e12b5ac89515e3aeed42739d9f5a2926df45172e5d3e3b9ea2cd5006e6c4713384870692e1253eed24b75d88 WHIRLPOOL 3f0f05b0c331bf99775b6153112702bf88eba1c358561fd3bb1c666bdd105b9ab562ff429bd757ee546e84e60f2df7f9ba909251396928d2e73ddc1e5ae6b6a7
 MISC metadata.xml 274 SHA256 2b4f14b46d21b004377e745db520f7961bc4163b23e6f3d8bbcab508272b1f69 SHA512 acfb3695928ebf2ee87c75f06c7ab47a65f4aa8564b1426ee523a1a5c853ed56df0de4cba186ac003383a27dfa9d21e4f4ff44b48e152c406a918f1b01ca358b WHIRLPOOL 0f245af71a769b0d4eb9bb57a99599a0875ad0373a830ff9e8215a077d3d2f02e916b7b25d275b19b5139810608abddfada68d3d0f2e9191351d26ba716b623b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlRqXAwACgkQVWmRsqeSphOEfACcDbOD/UhAnZuqew2FnEe74x2W
-f2wAnR6q+FcCLSyFnDIOYmmnR1/MyOOl
-=/s9O
+iJwEAQEIAAYFAlRrJioACgkQG9wOWsQutdZ2TwP/Wt3XL5ZS59Zj6wlt6QwcnGSx
+Gd6jete3rhjt96REbjURAF16ZDIj2Mb3N6FqxESEUmJXu6d5m7HrBcm4jgEJGANK
+QRus+zid/AEV5kkmRg6tFQv+atxu2IKA4yMHcF6UKsHUGjnpiIGm/KQqfGQcXtUj
+6GElcPvciKfPk/QlvdI=
+=rTvo
 -----END PGP SIGNATURE-----
