@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/uptimed
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/uptimed/ChangeLog,v 1.100 2014/03/03 13:55:08 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/uptimed/ChangeLog,v 1.101 2014/11/18 10:36:09 polynomial-c Exp $
+
+*uptimed-0.3.18 (18 Nov 2014)
+
+  18 Nov 2014; Lars Wendler <polynomial-c@gentoo.org> +uptimed-0.3.18.ebuild:
+  Version bump.
 
   03 Mar 2014; Lars Wendler <polynomial-c@gentoo.org> files/uptimed.init:
   Fixed pidfile location for non-linux systems.
